--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ Flask-JWT-Extended = "^3.24.1"
 Flask-Cors = "^3.0.9"
 Flask-SQLAlchemy = "^2.4.4"
 Flask-Migrate = "^2.5.3"
+flask-babel = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
