--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-flask = {extras = ["dotenv"], version = "^1.1.2"}
+flask = { extras = ["dotenv"], version = "^1.1.2" }
 invoke = "^1.4.1"
 Flask-JWT-Extended = "^3.24.1"
 Flask-Cors = "^3.0.9"
@@ -23,6 +23,11 @@ flake8 = "^3.8.4"
 pytest = "^6.1.1"
 flake8-docstrings = "^1.5.0"
 flake8-bugbear = "^20.1.4"
+Sphinx = "^3.2.1"
+tomlkit = "^0.7.0"
+recommonmark = "^0.6.0"
+sphinxcontrib-redoc = "^1.6.0"
+sphinx-click = "^2.5.0"
 
 [tool.poetry.scripts]
 #flask = 'flask.cli:main'
@@ -30,6 +35,26 @@ flake8-bugbear = "^20.1.4"
 [tool.black]
 line-length = 90
 include = '\.pyi?$'
+
+[tool.sphinx]
+copyright-year = 2020
+enable-autodoc = true
+enable-autosectionlabel = true
+enable-markdown = true
+enable-todo = true
+# update gitignore if you want to edit docs/changelog.md manually!
+include-changelog = true
+# update gitignore if you want to edit docs/readme.md manually!
+include-readme = true
+
+[tool.sphinx.intersphinx-mapping]
+python = ["https://docs.python.org/3"]
+
+[tool.sphinx.recommonmark]
+auto-toc-tree-section = "Contents"
+enable-math = false
+enable-inline-math = false
+enable-eval-rst = true
 
 [build-system]
 requires = ["poetry>=0.12"]
