--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,43 +1,43 @@
 [tool.poetry]
 name = "flask_template"
-version = "0.1.0"
+version = "0.2.0"
 description = "A template for Flask applications with SQLalchemy, Migrations and REST API"
 authors = ["Fabian Bühler"]
-license = "MIT"
+license = "Unlicense"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-flask = { extras = ["dotenv"], version = "^1.1.2" }
-invoke = "^1.4.1"
-Flask-JWT-Extended = "^3.24.1"
-Flask-Cors = "^3.0.9"
-Flask-SQLAlchemy = "^2.4.4"
-Flask-Migrate = "^2.5.3"
+flask = { extras = ["dotenv"], version = "^2.0.0" }
+Flask-JWT-Extended = "^4.0.0"
+Flask-Cors = "^3.0.10"
+Flask-SQLAlchemy = "^2.5.1"
+Flask-Migrate = "^3.0.0"
 flask-babel = "^2.0.0"
-flask-smorest = "^0.27.0"
+flask-smorest = "^0.31.0"
+tomlkit = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
-flake8 = "^3.8.4"
-pytest = "^6.1.1"
-flake8-docstrings = "^1.5.0"
-flake8-bugbear = "^20.1.4"
-Sphinx = "^3.2.1"
-tomlkit = "^0.7.0"
-recommonmark = "^0.6.0"
+black = "^21.5b1"
+flake8 = "^3.9.2"
+pytest = "^6.2.4"
+flake8-docstrings = "^1.6.0"
+flake8-bugbear = "^21.4.3"
+Sphinx = "^4.0.0"
+recommonmark = "^0.7.0"
 sphinxcontrib-redoc = "^1.6.0"
-sphinx-click = "^2.5.0"
+sphinx-click = "^3.0.0"
 
 [tool.poetry.scripts]
 #flask = 'flask.cli:main'
 
 [tool.black]
+target-version = ["py37"]
 line-length = 90
 include = '\.pyi?$'
 
 [tool.sphinx]
-copyright-year = 2020
+copyright-year = 2021
 enable-autodoc = true
 enable-autosectionlabel = true
 enable-markdown = true
