--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,14 @@ target-version = ["py37"]
 line-length = 90
 include = '\.pyi?$'
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+reverse_relative = true
+group_by_package = true
+honor_noqa = true
+atomic = true
+
 [tool.sphinx]
 copyright-year = 2021
 enable-autodoc = true
