--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ Flask-SQLAlchemy = "^2.5.1"
 Flask-Migrate = "^3.0.0"
 flask-babel = "^2.0.0"
 flask-smorest = "^0.31.1"
-tomlkit = "^0.7.0"
+tomli = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b1"
