--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask = { extras = ["dotenv"], version = "^2.0.0" }
 Flask-JWT-Extended = "^4.0.0"
 Flask-Cors = "^3.0.10"
 Flask-SQLAlchemy = "^2.5.1"
+SQLAlchemy = "^1.4.0"
 Flask-Migrate = "^3.0.0"
 flask-babel = "^2.0.0"
 flask-smorest = "^0.39.0"
