--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,35 +7,35 @@ license = "Unlicense"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-flask = { extras = ["dotenv"], version = "^2.0.0" }
-Flask-JWT-Extended = "^4.0.0"
+python = "^3.8.1"
+flask = { extras = ["dotenv"], version = "^2.2.3" }
+Flask-JWT-Extended = "^4.4.4"
 Flask-Cors = "^3.0.10"
-Flask-SQLAlchemy = "^2.5.1"
+Flask-SQLAlchemy = "^3.0.3"
 SQLAlchemy = "^1.4.0"
-Flask-Migrate = "^3.0.0"
-flask-babel = "^2.0.0"
-flask-smorest = "^0.39.0"
+Flask-Migrate = "^4.0.4"
+flask-babel = "^3.0.0"
+flask-smorest = "^0.40.0"
 tomli = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
-black = "^21.5b1"
-flake8 = "^3.9.2"
-pytest = "^6.2.4"
-flake8-docstrings = "^1.6.0"
-flake8-bugbear = "^21.4.3"
-Sphinx = "^4.0.0"
+black = "^23.1.0"
+flake8 = "^6.0.0"
+pytest = "^7.2.0"
+flake8-docstrings = "^1.7.0"
+flake8-bugbear = "^23.2.13"
+Sphinx = "^5.0.0"
 sphinxcontrib-redoc = "^1.6.0"
-sphinx-click = "^3.0.0"
-myst-parser = "^0.15.1"
-invoke = "^1.6.0"
-pip-licenses = "^3.5.3"
+sphinx-click = "^4.4.0"
+myst-parser = "^0.18.1"
+invoke = "^2.0.0"
+pip-licenses = "^4.0.3"
 
 [tool.poetry.scripts]
 #flask = 'flask.cli:main'
 
 [tool.black]
-target-version = ["py37"]
+target-version = ["py38"]
 line-length = 90
 include = '\.pyi?$'
 
