--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ flask-babel = "^3.0.0"
 flask-smorest = "^0.40.0"
 tomli = "^2.0.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+# use key "tool.poetry.dev-dependencies" if you have to support poetry < 1.2!
 black = "^23.1.0"
 flake8 = "^6.0.0"
 pytest = "^7.2.0"
